2006-12-02  Lars Clausen  <lars@raeder.dk>

	* app/interface.c (tool_data): Add note about Space toggling tools.

	* samples/render-test.dia: Updated font geometry part since font
	size has changed.  Also added polygon and beziergon with holes.

	* lib/diasvgrenderer.c: Specify that font-size is in
	cm, which according to
	http://www.w3.org/TR/SVG/text.html#FontSizeProperty specifies the
	baseline-to-baseline size of the font.  InkScape does not respect
	this, nor does gqview.  See bug #332826 for details.

	* lib/textline.c (text_line_cache_values): 
	* lib/font.c (get_layout_offsets): Fix (seemingly) remaining
	problems in the textline adjustment process.

	* lib/text.c: Fix a couple bugs, admit to using textline for text
	rendering, make sure height&font are set from attributes.
	
	* lib/text.h: 
	* lib/diarenderer.c: Admit to using textline for text rendering
	always. 

	* lib/diagdkrenderer.c (draw_text_line): Removed code for caching
	text rendering, it's not really needed with new textline based
	rendering being so fast after all.  Also remove debugging include
	of sys/time.h.

2006-12-01  Lars Clausen  <lars@raeder.dk>

	* plug-ins/pstricks/render_pstricks.c (set_linewidth): Specify
	unit of measure.  See bug #380302.

	* lib/font.c (get_layout_offsets): Remember the newly constructed
	runs SList.

	* lib/textline.c (text_line_cache_values): Don't take run->glyphs
	to be an array and crash.  Still some problems with text rendering.

2006-12-01  Steffen Macke <sdteffen@gmail.com>

	* lib/text.h: Added text_get_line() declaration
	* lib/text.c: 
	* lib/libdia.def: Added text_get_line_width, text_get_line, 
	text_get_descent,text_get_max_width
	* objects/UML/object.c: Fixed typo in objet_draw()
	* plug-ins/vdx/vdx-export.c: Use g_ascii_strncasecmp() instead of
	strcasecmp()
	
2006-11-30  Lars Clausen  <lars@raeder.dk>

	* app/diapsft2renderer.c (draw_text_line): 
	* lib/textline.[ch] (text_line_adjust_glyphs): 